--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-    <a href="index.html">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
       <ul>
         <li><a href="#">Студія</a></li>
         <li><a href="#">Портфоліо</a></li>
@@ -32,19 +32,19 @@
       <h2>Переваги</h2>
       <ul>
         <li>
-          <p>УВАГА ДО ДЕТАЛЕЙ</p>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
           <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-          <p>ПУНКТУАЛЬНІСТЬ</p>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
           <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-          <p>ПЛАНУВАННЯ</p>
+          <h3>ПЛАНУВАННЯ</h3>
           <p>Так само консультація з широким активом значною мірою зумовлює</p>
         </li>
         <li>
-          <p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
           <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
@@ -69,17 +69,17 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="./images/img-product-designer.jpg" alt="Ігор Дем'яненко">
+          <img src="./images/img-product-designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
           <h3>Ігор Дем'яненко</h3>
           <p lang="en">Product Designer</p>
         </li>
         <li>
-          <img src="./images/img-frontend-developer.jpg" alt="Ольга Рєпіна">
+          <img src="./images/img-frontend-developer.jpg" alt="Ольга Рєпіна" width="270" height="260">
           <h3>Ольга Рєпіна</h3>
           <p lang="en">Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/img-marketing.jpg" alt="Микола Тарасов">
+          <img src="./images/img-marketing.jpg" alt="Микола Тарасов" width="270" height="260">
           <h3>Микола Тарасов</h3>
           <p lang="en">Marketing</p>
         </li>
@@ -93,7 +93,7 @@
   </main>
 
   <footer>
-    <a href="index.html">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
     <address>
       <ul>
         <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
